# collector-service

./: CMakeLists.txt  README.md  default.nix  package.xml  proxy.py  setup.py
launch/: applicant.launch  collector.launch
scripts/: applicant_node  collector_node
srv/: GetObjective.srv  PublishDemand.srv
